parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    COMMENT
    FILE
    FORWARD
    GOTO
    IN
    LABEL
    NIL
    PACKED
    READ
    RECORD
    SET
    TYPE
    WITH

Grammar

Rule 0     S' -> Program
Rule 1     Program -> PROGRAM ID ; Code .
Rule 2     Code -> Declarations BEGIN Blocks END
Rule 3     Declarations -> Vars Declarations
Rule 4     Declarations -> Consts Declarations
Rule 5     Declarations -> Functions Declarations
Rule 6     Declarations -> Procedures Declarations
Rule 7     Declarations -> <empty>
Rule 8     Consts -> CONST ConstDefs
Rule 9     ConstDefs -> ID = ConstValue ; ConstDefs
Rule 10    ConstDefs -> <empty>
Rule 11    ConstValue -> INT
Rule 12    ConstValue -> REAL
Rule 13    ConstValue -> STR
Rule 14    ConstValue -> TRUE
Rule 15    ConstValue -> FALSE
Rule 16    Vars -> VAR VarList
Rule 17    VarList -> IDList : Type ; VarList
Rule 18    VarList -> <empty>
Rule 19    IDList -> ID RestoIDs
Rule 20    RestoIDs -> , ID RestoIDs
Rule 21    RestoIDs -> <empty>
Rule 22    Type -> INTEGER
Rule 23    Type -> BOOLEAN
Rule 24    Type -> STRING
Rule 25    Type -> REALTYPE
Rule 26    Type -> CHAR
Rule 27    Type -> ARRAY [ INT DOTDOT INT ] OF Type
Rule 28    Functions -> FUNCTION ID ( Parameters ) : Type ; FunctionBody
Rule 29    Functions -> FUNCTION ID : Type ; FunctionBody
Rule 30    FunctionBody -> Declarations BEGIN Blocks END ;
Rule 31    Procedures -> PROCEDURE ID ( Parameters ) ; ProcedureBody
Rule 32    Procedures -> PROCEDURE ID ; ProcedureBody
Rule 33    ProcedureBody -> Declarations BEGIN Blocks END ;
Rule 34    Parameters -> IDList : Type MoreParameters
Rule 35    Parameters -> <empty>
Rule 36    MoreParameters -> ; IDList : Type MoreParameters
Rule 37    MoreParameters -> <empty>
Rule 38    Blocks -> Block Blocks
Rule 39    Blocks -> <empty>
Rule 40    Block -> WRITELN ( WriteList ) ;
Rule 41    Block -> WRITE ( WriteList ) ;
Rule 42    WriteList -> WriteItem MoreWriteItems
Rule 43    MoreWriteItems -> , WriteItem MoreWriteItems
Rule 44    MoreWriteItems -> <empty>
Rule 45    WriteItem -> STR
Rule 46    WriteItem -> Exp
Rule 47    Block -> READLN ( ID ) ;
Rule 48    Block -> READLN ( ID [ Exp ] ) ;
Rule 49    Block -> ID ASSIGN Exp ;
Rule 50    Block -> ID [ Exp ] ASSIGN Exp ;
Rule 51    Block -> IF Condition THEN Block
Rule 52    Block -> IF Condition THEN Block ELSE Block
Rule 53    Block -> IF Condition THEN BEGIN Blocks END ;
Rule 54    Block -> IF Condition THEN BEGIN Blocks END ELSE BEGIN Blocks END ;
Rule 55    Block -> WHILE Condition DO Block
Rule 56    Block -> WHILE Condition DO BEGIN Blocks END ;
Rule 57    Block -> FOR ID ASSIGN Exp TO Exp DO Block
Rule 58    Block -> FOR ID ASSIGN Exp TO Exp DO BEGIN Blocks END ;
Rule 59    Block -> FOR ID ASSIGN Exp DOWNTO Exp DO Block
Rule 60    Block -> FOR ID ASSIGN Exp DOWNTO Exp DO BEGIN Blocks END ;
Rule 61    Block -> REPEAT Blocks UNTIL Condition ;
Rule 62    Condition -> Condition OR CondTerm
Rule 63    Condition -> CondTerm
Rule 64    CondTerm -> CondTerm AND CondFactor
Rule 65    CondTerm -> CondFactor
Rule 66    CondFactor -> NOT CondFactor
Rule 67    CondFactor -> Exp RelOp Exp
Rule 68    CondFactor -> ( Condition )
Rule 69    CondFactor -> TRUE
Rule 70    CondFactor -> FALSE
Rule 71    CondFactor -> ID
Rule 72    RelOp -> =
Rule 73    RelOp -> NE
Rule 74    RelOp -> <
Rule 75    RelOp -> LE
Rule 76    RelOp -> >
Rule 77    RelOp -> GE
Rule 78    Exp -> Exp + Term
Rule 79    Exp -> Exp - Term
Rule 80    Exp -> Term
Rule 81    Term -> Term * Factor
Rule 82    Term -> Term / Factor
Rule 83    Term -> Term DIV Factor
Rule 84    Term -> Term MOD Factor
Rule 85    Term -> Factor
Rule 86    Factor -> INT
Rule 87    Factor -> REAL
Rule 88    Factor -> STR
Rule 89    Factor -> TRUE
Rule 90    Factor -> FALSE
Rule 91    Factor -> ID
Rule 92    Factor -> ID [ Exp ]
Rule 93    Factor -> ID ( ArgumentList )
Rule 94    Factor -> LENGTH ( ArgumentList )
Rule 95    Factor -> ( Exp )
Rule 96    ArgumentList -> Exp MoreArguments
Rule 97    ArgumentList -> <empty>
Rule 98    MoreArguments -> , Exp MoreArguments
Rule 99    MoreArguments -> <empty>

Terminals, with rules where they appear

(                    : 28 31 40 41 47 48 68 93 94 95
)                    : 28 31 40 41 47 48 68 93 94 95
*                    : 81
+                    : 78
,                    : 20 43 98
-                    : 79
.                    : 1
/                    : 82
:                    : 17 28 29 34 36
;                    : 1 9 17 28 29 30 31 32 33 36 40 41 47 48 49 50 53 54 56 58 60 61
<                    : 74
=                    : 9 72
>                    : 76
AND                  : 64
ARRAY                : 27
ASSIGN               : 49 50 57 58 59 60
BEGIN                : 2 30 33 53 54 54 56 58 60
BOOLEAN              : 23
CASE                 : 
CHAR                 : 26
COMMENT              : 
CONST                : 8
DIV                  : 83
DO                   : 55 56 57 58 59 60
DOTDOT               : 27
DOWNTO               : 59 60
ELSE                 : 52 54
END                  : 2 30 33 53 54 54 56 58 60
FALSE                : 15 70 90
FILE                 : 
FOR                  : 57 58 59 60
FORWARD              : 
FUNCTION             : 28 29
GE                   : 77
GOTO                 : 
ID                   : 1 9 19 20 28 29 31 32 47 48 49 50 57 58 59 60 71 91 92 93
IF                   : 51 52 53 54
IN                   : 
INT                  : 11 27 27 86
INTEGER              : 22
LABEL                : 
LE                   : 75
LENGTH               : 94
MOD                  : 84
NE                   : 73
NIL                  : 
NOT                  : 66
OF                   : 27
OR                   : 62
PACKED               : 
PROCEDURE            : 31 32
PROGRAM              : 1
READ                 : 
READLN               : 47 48
REAL                 : 12 87
REALTYPE             : 25
RECORD               : 
REPEAT               : 61
SET                  : 
STR                  : 13 45 88
STRING               : 24
THEN                 : 51 52 53 54
TO                   : 57 58
TRUE                 : 14 69 89
TYPE                 : 
UNTIL                : 61
VAR                  : 16
WHILE                : 55 56
WITH                 : 
WRITE                : 41
WRITELN              : 40
[                    : 27 48 50 92
]                    : 27 48 50 92
error                : 

Nonterminals, with rules where they appear

ArgumentList         : 93 94
Block                : 38 51 52 52 55 57 59
Blocks               : 2 30 33 38 53 54 54 56 58 60 61
Code                 : 1
CondFactor           : 64 65 66
CondTerm             : 62 63 64
Condition            : 51 52 53 54 55 56 61 62 68
ConstDefs            : 8 9
ConstValue           : 9
Consts               : 4
Declarations         : 2 3 4 5 6 30 33
Exp                  : 46 48 49 50 50 57 57 58 58 59 59 60 60 67 67 78 79 92 95 96 98
Factor               : 81 82 83 84 85
FunctionBody         : 28 29
Functions            : 5
IDList               : 17 34 36
MoreArguments        : 96 98
MoreParameters       : 34 36
MoreWriteItems       : 42 43
Parameters           : 28 31
ProcedureBody        : 31 32
Procedures           : 6
Program              : 0
RelOp                : 67
RestoIDs             : 19 20
Term                 : 78 79 80 81 82 83 84
Type                 : 17 27 28 29 34 36
VarList              : 16 17
Vars                 : 3
WriteItem            : 42 43
WriteList            : 40 41

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . PROGRAM ID ; Code .

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> PROGRAM . ID ; Code .

    ID              shift and go to state 3


state 3

    (1) Program -> PROGRAM ID . ; Code .

    ;               shift and go to state 4


state 4

    (1) Program -> PROGRAM ID ; . Code .
    (2) Code -> . Declarations BEGIN Blocks END
    (3) Declarations -> . Vars Declarations
    (4) Declarations -> . Consts Declarations
    (5) Declarations -> . Functions Declarations
    (6) Declarations -> . Procedures Declarations
    (7) Declarations -> .
    (16) Vars -> . VAR VarList
    (8) Consts -> . CONST ConstDefs
    (28) Functions -> . FUNCTION ID ( Parameters ) : Type ; FunctionBody
    (29) Functions -> . FUNCTION ID : Type ; FunctionBody
    (31) Procedures -> . PROCEDURE ID ( Parameters ) ; ProcedureBody
    (32) Procedures -> . PROCEDURE ID ; ProcedureBody

    BEGIN           reduce using rule 7 (Declarations -> .)
    VAR             shift and go to state 11
    CONST           shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    Code                           shift and go to state 5
    Declarations                   shift and go to state 6
    Vars                           shift and go to state 7
    Consts                         shift and go to state 8
    Functions                      shift and go to state 9
    Procedures                     shift and go to state 10

state 5

    (1) Program -> PROGRAM ID ; Code . .

    .               shift and go to state 15


state 6

    (2) Code -> Declarations . BEGIN Blocks END

    BEGIN           shift and go to state 16


state 7

    (3) Declarations -> Vars . Declarations
    (3) Declarations -> . Vars Declarations
    (4) Declarations -> . Consts Declarations
    (5) Declarations -> . Functions Declarations
    (6) Declarations -> . Procedures Declarations
    (7) Declarations -> .
    (16) Vars -> . VAR VarList
    (8) Consts -> . CONST ConstDefs
    (28) Functions -> . FUNCTION ID ( Parameters ) : Type ; FunctionBody
    (29) Functions -> . FUNCTION ID : Type ; FunctionBody
    (31) Procedures -> . PROCEDURE ID ( Parameters ) ; ProcedureBody
    (32) Procedures -> . PROCEDURE ID ; ProcedureBody

    BEGIN           reduce using rule 7 (Declarations -> .)
    VAR             shift and go to state 11
    CONST           shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    Vars                           shift and go to state 7
    Declarations                   shift and go to state 17
    Consts                         shift and go to state 8
    Functions                      shift and go to state 9
    Procedures                     shift and go to state 10

state 8

    (4) Declarations -> Consts . Declarations
    (3) Declarations -> . Vars Declarations
    (4) Declarations -> . Consts Declarations
    (5) Declarations -> . Functions Declarations
    (6) Declarations -> . Procedures Declarations
    (7) Declarations -> .
    (16) Vars -> . VAR VarList
    (8) Consts -> . CONST ConstDefs
    (28) Functions -> . FUNCTION ID ( Parameters ) : Type ; FunctionBody
    (29) Functions -> . FUNCTION ID : Type ; FunctionBody
    (31) Procedures -> . PROCEDURE ID ( Parameters ) ; ProcedureBody
    (32) Procedures -> . PROCEDURE ID ; ProcedureBody

    BEGIN           reduce using rule 7 (Declarations -> .)
    VAR             shift and go to state 11
    CONST           shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    Consts                         shift and go to state 8
    Declarations                   shift and go to state 18
    Vars                           shift and go to state 7
    Functions                      shift and go to state 9
    Procedures                     shift and go to state 10

state 9

    (5) Declarations -> Functions . Declarations
    (3) Declarations -> . Vars Declarations
    (4) Declarations -> . Consts Declarations
    (5) Declarations -> . Functions Declarations
    (6) Declarations -> . Procedures Declarations
    (7) Declarations -> .
    (16) Vars -> . VAR VarList
    (8) Consts -> . CONST ConstDefs
    (28) Functions -> . FUNCTION ID ( Parameters ) : Type ; FunctionBody
    (29) Functions -> . FUNCTION ID : Type ; FunctionBody
    (31) Procedures -> . PROCEDURE ID ( Parameters ) ; ProcedureBody
    (32) Procedures -> . PROCEDURE ID ; ProcedureBody

    BEGIN           reduce using rule 7 (Declarations -> .)
    VAR             shift and go to state 11
    CONST           shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    Functions                      shift and go to state 9
    Declarations                   shift and go to state 19
    Vars                           shift and go to state 7
    Consts                         shift and go to state 8
    Procedures                     shift and go to state 10

state 10

    (6) Declarations -> Procedures . Declarations
    (3) Declarations -> . Vars Declarations
    (4) Declarations -> . Consts Declarations
    (5) Declarations -> . Functions Declarations
    (6) Declarations -> . Procedures Declarations
    (7) Declarations -> .
    (16) Vars -> . VAR VarList
    (8) Consts -> . CONST ConstDefs
    (28) Functions -> . FUNCTION ID ( Parameters ) : Type ; FunctionBody
    (29) Functions -> . FUNCTION ID : Type ; FunctionBody
    (31) Procedures -> . PROCEDURE ID ( Parameters ) ; ProcedureBody
    (32) Procedures -> . PROCEDURE ID ; ProcedureBody

    BEGIN           reduce using rule 7 (Declarations -> .)
    VAR             shift and go to state 11
    CONST           shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    Procedures                     shift and go to state 10
    Declarations                   shift and go to state 20
    Vars                           shift and go to state 7
    Consts                         shift and go to state 8
    Functions                      shift and go to state 9

state 11

    (16) Vars -> VAR . VarList
    (17) VarList -> . IDList : Type ; VarList
    (18) VarList -> .
    (19) IDList -> . ID RestoIDs

    VAR             reduce using rule 18 (VarList -> .)
    CONST           reduce using rule 18 (VarList -> .)
    FUNCTION        reduce using rule 18 (VarList -> .)
    PROCEDURE       reduce using rule 18 (VarList -> .)
    BEGIN           reduce using rule 18 (VarList -> .)
    ID              shift and go to state 23

    VarList                        shift and go to state 21
    IDList                         shift and go to state 22

state 12

    (8) Consts -> CONST . ConstDefs
    (9) ConstDefs -> . ID = ConstValue ; ConstDefs
    (10) ConstDefs -> .

    ID              shift and go to state 25
    VAR             reduce using rule 10 (ConstDefs -> .)
    CONST           reduce using rule 10 (ConstDefs -> .)
    FUNCTION        reduce using rule 10 (ConstDefs -> .)
    PROCEDURE       reduce using rule 10 (ConstDefs -> .)
    BEGIN           reduce using rule 10 (ConstDefs -> .)

    ConstDefs                      shift and go to state 24

state 13

    (28) Functions -> FUNCTION . ID ( Parameters ) : Type ; FunctionBody
    (29) Functions -> FUNCTION . ID : Type ; FunctionBody

    ID              shift and go to state 26


state 14

    (31) Procedures -> PROCEDURE . ID ( Parameters ) ; ProcedureBody
    (32) Procedures -> PROCEDURE . ID ; ProcedureBody

    ID              shift and go to state 27


state 15

    (1) Program -> PROGRAM ID ; Code . .

    $end            reduce using rule 1 (Program -> PROGRAM ID ; Code . .)


state 16

    (2) Code -> Declarations BEGIN . Blocks END
    (38) Blocks -> . Block Blocks
    (39) Blocks -> .
    (40) Block -> . WRITELN ( WriteList ) ;
    (41) Block -> . WRITE ( WriteList ) ;
    (47) Block -> . READLN ( ID ) ;
    (48) Block -> . READLN ( ID [ Exp ] ) ;
    (49) Block -> . ID ASSIGN Exp ;
    (50) Block -> . ID [ Exp ] ASSIGN Exp ;
    (51) Block -> . IF Condition THEN Block
    (52) Block -> . IF Condition THEN Block ELSE Block
    (53) Block -> . IF Condition THEN BEGIN Blocks END ;
    (54) Block -> . IF Condition THEN BEGIN Blocks END ELSE BEGIN Blocks END ;
    (55) Block -> . WHILE Condition DO Block
    (56) Block -> . WHILE Condition DO BEGIN Blocks END ;
    (57) Block -> . FOR ID ASSIGN Exp TO Exp DO Block
    (58) Block -> . FOR ID ASSIGN Exp TO Exp DO BEGIN Blocks END ;
    (59) Block -> . FOR ID ASSIGN Exp DOWNTO Exp DO Block
    (60) Block -> . FOR ID ASSIGN Exp DOWNTO Exp DO BEGIN Blocks END ;
    (61) Block -> . REPEAT Blocks UNTIL Condition ;

    END             reduce using rule 39 (Blocks -> .)
    WRITELN         shift and go to state 30
    WRITE           shift and go to state 31
    READLN          shift and go to state 32
    ID              shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    REPEAT          shift and go to state 37

    Blocks                         shift and go to state 28
    Block                          shift and go to state 29

state 17

    (3) Declarations -> Vars Declarations .

    BEGIN           reduce using rule 3 (Declarations -> Vars Declarations .)


state 18

    (4) Declarations -> Consts Declarations .

    BEGIN           reduce using rule 4 (Declarations -> Consts Declarations .)


state 19

    (5) Declarations -> Functions Declarations .

    BEGIN           reduce using rule 5 (Declarations -> Functions Declarations .)


state 20

    (6) Declarations -> Procedures Declarations .

    BEGIN           reduce using rule 6 (Declarations -> Procedures Declarations .)


state 21

    (16) Vars -> VAR VarList .

    VAR             reduce using rule 16 (Vars -> VAR VarList .)
    CONST           reduce using rule 16 (Vars -> VAR VarList .)
    FUNCTION        reduce using rule 16 (Vars -> VAR VarList .)
    PROCEDURE       reduce using rule 16 (Vars -> VAR VarList .)
    BEGIN           reduce using rule 16 (Vars -> VAR VarList .)


state 22

    (17) VarList -> IDList . : Type ; VarList

    :               shift and go to state 38


state 23

    (19) IDList -> ID . RestoIDs
    (20) RestoIDs -> . , ID RestoIDs
    (21) RestoIDs -> .

    ,               shift and go to state 40
    :               reduce using rule 21 (RestoIDs -> .)

    RestoIDs                       shift and go to state 39

state 24

    (8) Consts -> CONST ConstDefs .

    VAR             reduce using rule 8 (Consts -> CONST ConstDefs .)
    CONST           reduce using rule 8 (Consts -> CONST ConstDefs .)
    FUNCTION        reduce using rule 8 (Consts -> CONST ConstDefs .)
    PROCEDURE       reduce using rule 8 (Consts -> CONST ConstDefs .)
    BEGIN           reduce using rule 8 (Consts -> CONST ConstDefs .)


state 25

    (9) ConstDefs -> ID . = ConstValue ; ConstDefs

    =               shift and go to state 41


state 26

    (28) Functions -> FUNCTION ID . ( Parameters ) : Type ; FunctionBody
    (29) Functions -> FUNCTION ID . : Type ; FunctionBody

    (               shift and go to state 42
    :               shift and go to state 43


state 27

    (31) Procedures -> PROCEDURE ID . ( Parameters ) ; ProcedureBody
    (32) Procedures -> PROCEDURE ID . ; ProcedureBody

    (               shift and go to state 44
    ;               shift and go to state 45


state 28

    (2) Code -> Declarations BEGIN Blocks . END

    END             shift and go to state 46


state 29

    (38) Blocks -> Block . Blocks
    (38) Blocks -> . Block Blocks
    (39) Blocks -> .
    (40) Block -> . WRITELN ( WriteList ) ;
    (41) Block -> . WRITE ( WriteList ) ;
    (47) Block -> . READLN ( ID ) ;
    (48) Block -> . READLN ( ID [ Exp ] ) ;
    (49) Block -> . ID ASSIGN Exp ;
    (50) Block -> . ID [ Exp ] ASSIGN Exp ;
    (51) Block -> . IF Condition THEN Block
    (52) Block -> . IF Condition THEN Block ELSE Block
    (53) Block -> . IF Condition THEN BEGIN Blocks END ;
    (54) Block -> . IF Condition THEN BEGIN Blocks END ELSE BEGIN Blocks END ;
    (55) Block -> . WHILE Condition DO Block
    (56) Block -> . WHILE Condition DO BEGIN Blocks END ;
    (57) Block -> . FOR ID ASSIGN Exp TO Exp DO Block
    (58) Block -> . FOR ID ASSIGN Exp TO Exp DO BEGIN Blocks END ;
    (59) Block -> . FOR ID ASSIGN Exp DOWNTO Exp DO Block
    (60) Block -> . FOR ID ASSIGN Exp DOWNTO Exp DO BEGIN Blocks END ;
    (61) Block -> . REPEAT Blocks UNTIL Condition ;

    END             reduce using rule 39 (Blocks -> .)
    UNTIL           reduce using rule 39 (Blocks -> .)
    WRITELN         shift and go to state 30
    WRITE           shift and go to state 31
    READLN          shift and go to state 32
    ID              shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    REPEAT          shift and go to state 37

    Block                          shift and go to state 29
    Blocks                         shift and go to state 47

state 30

    (40) Block -> WRITELN . ( WriteList ) ;

    (               shift and go to state 48


state 31

    (41) Block -> WRITE . ( WriteList ) ;

    (               shift and go to state 49


state 32

    (47) Block -> READLN . ( ID ) ;
    (48) Block -> READLN . ( ID [ Exp ] ) ;

    (               shift and go to state 50


state 33

    (49) Block -> ID . ASSIGN Exp ;
    (50) Block -> ID . [ Exp ] ASSIGN Exp ;

    ASSIGN          shift and go to state 51
    [               shift and go to state 52


state 34

    (51) Block -> IF . Condition THEN Block
    (52) Block -> IF . Condition THEN Block ELSE Block
    (53) Block -> IF . Condition THEN BEGIN Blocks END ;
    (54) Block -> IF . Condition THEN BEGIN Blocks END ELSE BEGIN Blocks END ;
    (62) Condition -> . Condition OR CondTerm
    (63) Condition -> . CondTerm
    (64) CondTerm -> . CondTerm AND CondFactor
    (65) CondTerm -> . CondFactor
    (66) CondFactor -> . NOT CondFactor
    (67) CondFactor -> . Exp RelOp Exp
    (68) CondFactor -> . ( Condition )
    (69) CondFactor -> . TRUE
    (70) CondFactor -> . FALSE
    (71) CondFactor -> . ID
    (78) Exp -> . Exp + Term
    (79) Exp -> . Exp - Term
    (80) Exp -> . Term
    (81) Term -> . Term * Factor
    (82) Term -> . Term / Factor
    (83) Term -> . Term DIV Factor
    (84) Term -> . Term MOD Factor
    (85) Term -> . Factor
    (86) Factor -> . INT
    (87) Factor -> . REAL
    (88) Factor -> . STR
    (89) Factor -> . TRUE
    (90) Factor -> . FALSE
    (91) Factor -> . ID
    (92) Factor -> . ID [ Exp ]
    (93) Factor -> . ID ( ArgumentList )
    (94) Factor -> . LENGTH ( ArgumentList )
    (95) Factor -> . ( Exp )

    NOT             shift and go to state 56
    (               shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 61
    INT             shift and go to state 64
    REAL            shift and go to state 65
    STR             shift and go to state 66
    LENGTH          shift and go to state 67

    Condition                      shift and go to state 53
    CondTerm                       shift and go to state 54
    CondFactor                     shift and go to state 55
    Exp                            shift and go to state 57
    Term                           shift and go to state 62
    Factor                         shift and go to state 63

state 35

    (55) Block -> WHILE . Condition DO Block
    (56) Block -> WHILE . Condition DO BEGIN Blocks END ;
    (62) Condition -> . Condition OR CondTerm
    (63) Condition -> . CondTerm
    (64) CondTerm -> . CondTerm AND CondFactor
    (65) CondTerm -> . CondFactor
    (66) CondFactor -> . NOT CondFactor
    (67) CondFactor -> . Exp RelOp Exp
    (68) CondFactor -> . ( Condition )
    (69) CondFactor -> . TRUE
    (70) CondFactor -> . FALSE
    (71) CondFactor -> . ID
    (78) Exp -> . Exp + Term
    (79) Exp -> . Exp - Term
    (80) Exp -> . Term
    (81) Term -> . Term * Factor
    (82) Term -> . Term / Factor
    (83) Term -> . Term DIV Factor
    (84) Term -> . Term MOD Factor
    (85) Term -> . Factor
    (86) Factor -> . INT
    (87) Factor -> . REAL
    (88) Factor -> . STR
    (89) Factor -> . TRUE
    (90) Factor -> . FALSE
    (91) Factor -> . ID
    (92) Factor -> . ID [ Exp ]
    (93) Factor -> . ID ( ArgumentList )
    (94) Factor -> . LENGTH ( ArgumentList )
    (95) Factor -> . ( Exp )

    NOT             shift and go to state 56
    (               shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 61
    INT             shift and go to state 64
    REAL            shift and go to state 65
    STR             shift and go to state 66
    LENGTH          shift and go to state 67

    Condition                      shift and go to state 68
    CondTerm                       shift and go to state 54
    CondFactor                     shift and go to state 55
    Exp                            shift and go to state 57
    Term                           shift and go to state 62
    Factor                         shift and go to state 63

state 36

    (57) Block -> FOR . ID ASSIGN Exp TO Exp DO Block
    (58) Block -> FOR . ID ASSIGN Exp TO Exp DO BEGIN Blocks END ;
    (59) Block -> FOR . ID ASSIGN Exp DOWNTO Exp DO Block
    (60) Block -> FOR . ID ASSIGN Exp DOWNTO Exp DO BEGIN Blocks END ;

    ID              shift and go to state 69


state 37

    (61) Block -> REPEAT . Blocks UNTIL Condition ;
    (38) Blocks -> . Block Blocks
    (39) Blocks -> .
    (40) Block -> . WRITELN ( WriteList ) ;
    (41) Block -> . WRITE ( WriteList ) ;
    (47) Block -> . READLN ( ID ) ;
    (48) Block -> . READLN ( ID [ Exp ] ) ;
    (49) Block -> . ID ASSIGN Exp ;
    (50) Block -> . ID [ Exp ] ASSIGN Exp ;
    (51) Block -> . IF Condition THEN Block
    (52) Block -> . IF Condition THEN Block ELSE Block
    (53) Block -> . IF Condition THEN BEGIN Blocks END ;
    (54) Block -> . IF Condition THEN BEGIN Blocks END ELSE BEGIN Blocks END ;
    (55) Block -> . WHILE Condition DO Block
    (56) Block -> . WHILE Condition DO BEGIN Blocks END ;
    (57) Block -> . FOR ID ASSIGN Exp TO Exp DO Block
    (58) Block -> . FOR ID ASSIGN Exp TO Exp DO BEGIN Blocks END ;
    (59) Block -> . FOR ID ASSIGN Exp DOWNTO Exp DO Block
    (60) Block -> . FOR ID ASSIGN Exp DOWNTO Exp DO BEGIN Blocks END ;
    (61) Block -> . REPEAT Blocks UNTIL Condition ;

    UNTIL           reduce using rule 39 (Blocks -> .)
    WRITELN         shift and go to state 30
    WRITE           shift and go to state 31
    READLN          shift and go to state 32
    ID              shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    REPEAT          shift and go to state 37

    Blocks                         shift and go to state 70
    Block                          shift and go to state 29

state 38

    (17) VarList -> IDList : . Type ; VarList
    (22) Type -> . INTEGER
    (23) Type -> . BOOLEAN
    (24) Type -> . STRING
    (25) Type -> . REALTYPE
    (26) Type -> . CHAR
    (27) Type -> . ARRAY [ INT DOTDOT INT ] OF Type

    INTEGER         shift and go to state 72
    BOOLEAN         shift and go to state 73
    STRING          shift and go to state 74
    REALTYPE        shift and go to state 75
    CHAR            shift and go to state 76
    ARRAY           shift and go to state 77

    Type                           shift and go to state 71

state 39

    (19) IDList -> ID RestoIDs .

    :               reduce using rule 19 (IDList -> ID RestoIDs .)


state 40

    (20) RestoIDs -> , . ID RestoIDs

    ID              shift and go to state 78


state 41

    (9) ConstDefs -> ID = . ConstValue ; ConstDefs
    (11) ConstValue -> . INT
    (12) ConstValue -> . REAL
    (13) ConstValue -> . STR
    (14) ConstValue -> . TRUE
    (15) ConstValue -> . FALSE

    INT             shift and go to state 80
    REAL            shift and go to state 81
    STR             shift and go to state 82
    TRUE            shift and go to state 83
    FALSE           shift and go to state 84

    ConstValue                     shift and go to state 79

state 42

    (28) Functions -> FUNCTION ID ( . Parameters ) : Type ; FunctionBody
    (34) Parameters -> . IDList : Type MoreParameters
    (35) Parameters -> .
    (19) IDList -> . ID RestoIDs

    )               reduce using rule 35 (Parameters -> .)
    ID              shift and go to state 23

    Parameters                     shift and go to state 85
    IDList                         shift and go to state 86

state 43

    (29) Functions -> FUNCTION ID : . Type ; FunctionBody
    (22) Type -> . INTEGER
    (23) Type -> . BOOLEAN
    (24) Type -> . STRING
    (25) Type -> . REALTYPE
    (26) Type -> . CHAR
    (27) Type -> . ARRAY [ INT DOTDOT INT ] OF Type

    INTEGER         shift and go to state 72
    BOOLEAN         shift and go to state 73
    STRING          shift and go to state 74
    REALTYPE        shift and go to state 75
    CHAR            shift and go to state 76
    ARRAY           shift and go to state 77

    Type                           shift and go to state 87

state 44

    (31) Procedures -> PROCEDURE ID ( . Parameters ) ; ProcedureBody
    (34) Parameters -> . IDList : Type MoreParameters
    (35) Parameters -> .
    (19) IDList -> . ID RestoIDs

    )               reduce using rule 35 (Parameters -> .)
    ID              shift and go to state 23

    Parameters                     shift and go to state 88
    IDList                         shift and go to state 86

state 45

    (32) Procedures -> PROCEDURE ID ; . ProcedureBody
    (33) ProcedureBody -> . Declarations BEGIN Blocks END ;
    (3) Declarations -> . Vars Declarations
    (4) Declarations -> . Consts Declarations
    (5) Declarations -> . Functions Declarations
    (6) Declarations -> . Procedures Declarations
    (7) Declarations -> .
    (16) Vars -> . VAR VarList
    (8) Consts -> . CONST ConstDefs
    (28) Functions -> . FUNCTION ID ( Parameters ) : Type ; FunctionBody
    (29) Functions -> . FUNCTION ID : Type ; FunctionBody
    (31) Procedures -> . PROCEDURE ID ( Parameters ) ; ProcedureBody
    (32) Procedures -> . PROCEDURE ID ; ProcedureBody

    BEGIN           reduce using rule 7 (Declarations -> .)
    VAR             shift and go to state 11
    CONST           shift and go to state 12
    FUNCTION        shift and go to state 13
    PROCEDURE       shift and go to state 14

    ProcedureBody                  shift and go to state 89
    Declarations                   shift and go to state 90
    Vars                           shift and go to state 7
    Consts                         shift and go to state 8
    Functions                      shift and go to state 9
    Procedures                     shift and go to state 10

state 46

    (2) Code -> Declarations BEGIN Blocks END .

    .               reduce using rule 2 (Code -> Declarations BEGIN Blocks END .)


state 47

    (38) Blocks -> Block Blocks .

    END             reduce using rule 38 (Blocks -> Block Blocks .)
    UNTIL           reduce using rule 38 (Blocks -> Block Blocks .)


state 48

    (40) Block -> WRITELN ( . WriteList ) ;
    (42) WriteList -> . WriteItem MoreWriteItems
    (45) WriteItem -> . STR
    (46) WriteItem -> . Exp
    (78) Exp -> . Exp + Term
    (79) Exp -> . Exp - Term
    (80) Exp -> . Term
    (81) Term -> . Term * Factor
    (82) Term -> . Term / Factor
    (83) Term -> . Term DIV Factor
    (84) Term -> . Term MOD Factor
    (85) Term -> . Factor
    (86) Factor -> . INT
    (87) Factor -> . REAL
    (88) Factor -> . STR
    (89) Factor -> . TRUE
    (90) Factor -> . FALSE
    (91) Factor -> . ID
    (92) Factor -> . ID [ Exp ]
    (93) Factor -> . ID ( ArgumentList )
    (94) Factor -> . LENGTH ( ArgumentList )
    (95) Factor -> . ( Exp )

    STR             shift and go to state 94
    INT             shift and go to state 64
    REAL            shift and go to state 65
    TRUE            shift and go to state 96
    FALSE           shift and go to state 97
    ID              shift and go to state 98
    LENGTH          shift and go to state 67
    (               shift and go to state 91

    WriteList                      shift and go to state 92
    WriteItem                      shift and go to state 93
    Exp                            shift and go to state 95
    Term                           shift and go to state 62
    Factor                         shift and go to state 63

state 49

    (41) Block -> WRITE ( . WriteList ) ;
    (42) WriteList -> . WriteItem MoreWriteItems
    (45) WriteItem -> . STR
    (46) WriteItem -> . Exp
    (78) Exp -> . Exp + Term
    (79) Exp -> . Exp - Term
    (80) Exp -> . Term
    (81) Term -> . Term * Factor
    (82) Term -> . Term / Factor
    (83) Term -> . Term DIV Factor
    (84) Term -> . Term MOD Factor
    (85) Term -> . Factor
    (86) Factor -> . INT
    (87) Factor -> . REAL
    (88) Factor -> . STR
    (89) Factor -> . TRUE
    (90) Factor -> . FALSE
    (91) Factor -> . ID
    (92) Factor -> . ID [ Exp ]
    (93) Factor -> . ID ( ArgumentList )
    (94) Factor -> . LENGTH ( ArgumentList )
    (95) Factor -> . ( Exp )
